{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 297,
  "lineage": "907504b7-4f3c-6299-1f8a-8304281bd058",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.49.0.0/16"
            ],
            "guid": "28ee067f-62a5-4e24-a81b-dfb311e93c38",
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "location": "usgovvirginia",
            "name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "subnets": [
              "vGFE-Virginia-vNext-Subnet-3",
              "vGFE-Virginia-vNext-Subnet-0",
              "vGFE-Virginia-vNext-Subnet-1",
              "vGFE-Virginia-vNext-Subnet-2"
            ]
          }
        }
      ]
    },
    {
      "module": "module.session_hosts[0]",
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "location": "usgovvirginia",
            "name": "CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "route": [],
            "subnets": [
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.session_hosts[0]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.49.0.0/16"
            ],
            "guid": "28ee067f-62a5-4e24-a81b-dfb311e93c38",
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "location": "usgovvirginia",
            "name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "subnets": [
              "vGFE-Virginia-vNext-Subnet-3",
              "vGFE-Virginia-vNext-Subnet-0",
              "vGFE-Virginia-vNext-Subnet-1",
              "vGFE-Virginia-vNext-Subnet-2"
            ]
          }
        }
      ]
    },
    {
      "module": "module.session_hosts[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/AVD-VA-011-1-RG/providers/Microsoft.Network/networkInterfaces/AVD-A-mcnt-1-NIC",
            "internal_domain_name_suffix": "p2do2kffmise3ka114zrd0j2ha.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "webipconfig0",
                "primary": true,
                "private_ip_address": "10.49.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0"
              }
            ],
            "location": "usgovvirginia",
            "name": "AVD-A-mcnt-1-NIC",
            "private_ip_address": "10.49.2.4",
            "private_ip_addresses": [
              "10.49.2.4"
            ],
            "resource_group_name": "AVD-VA-011-1-RG"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.random_string.random",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.49.2.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0",
            "name": "vGFE-Virginia-vNext-Subnet-0",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "virtual_network_name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[0]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "session_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0",
            "route_table_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.data.azurerm_route_table.rt",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[1]",
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "location": "usgovvirginia",
            "name": "CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "route": [],
            "subnets": [
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.session_hosts[1]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.49.0.0/16"
            ],
            "guid": "28ee067f-62a5-4e24-a81b-dfb311e93c38",
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "location": "usgovvirginia",
            "name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "subnets": [
              "vGFE-Virginia-vNext-Subnet-3",
              "vGFE-Virginia-vNext-Subnet-0",
              "vGFE-Virginia-vNext-Subnet-1",
              "vGFE-Virginia-vNext-Subnet-2"
            ]
          }
        }
      ]
    },
    {
      "module": "module.session_hosts[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/AVD-VA-011-2-RG/providers/Microsoft.Network/networkInterfaces/AVD-A-fucm-1-NIC",
            "internal_domain_name_suffix": "p2do2kffmise3ka114zrd0j2ha.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "webipconfig0",
                "primary": true,
                "private_ip_address": "10.49.2.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1"
              }
            ],
            "location": "usgovvirginia",
            "name": "AVD-A-fucm-1-NIC",
            "private_ip_address": "10.49.2.68",
            "private_ip_addresses": [
              "10.49.2.68"
            ],
            "resource_group_name": "AVD-VA-011-2-RG"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.random_string.random",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[1]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.49.2.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1",
            "name": "vGFE-Virginia-vNext-Subnet-1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "virtual_network_name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[1]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "session_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1",
            "route_table_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.data.azurerm_route_table.rt",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[2]",
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "location": "usgovvirginia",
            "name": "CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "route": [],
            "subnets": [
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.session_hosts[2]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.49.0.0/16"
            ],
            "guid": "28ee067f-62a5-4e24-a81b-dfb311e93c38",
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "location": "usgovvirginia",
            "name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "subnets": [
              "vGFE-Virginia-vNext-Subnet-3",
              "vGFE-Virginia-vNext-Subnet-0",
              "vGFE-Virginia-vNext-Subnet-1",
              "vGFE-Virginia-vNext-Subnet-2"
            ]
          }
        }
      ]
    },
    {
      "module": "module.session_hosts[2]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/AVD-VA-011-3-RG/providers/Microsoft.Network/networkInterfaces/AVD-A-f4c5-1-NIC",
            "internal_domain_name_suffix": "p2do2kffmise3ka114zrd0j2ha.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "webipconfig0",
                "primary": true,
                "private_ip_address": "10.49.2.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2"
              }
            ],
            "location": "usgovvirginia",
            "name": "AVD-A-f4c5-1-NIC",
            "private_ip_address": "10.49.2.132",
            "private_ip_addresses": [
              "10.49.2.132"
            ],
            "resource_group_name": "AVD-VA-011-3-RG"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.random_string.random",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[2]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.49.2.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2",
            "name": "vGFE-Virginia-vNext-Subnet-2",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "virtual_network_name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[2]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "session_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2",
            "route_table_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.data.azurerm_route_table.rt",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[3]",
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "location": "usgovvirginia",
            "name": "CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "route": [],
            "subnets": [
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-0",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-1",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-2",
              "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.session_hosts[3]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.49.0.0/16"
            ],
            "guid": "28ee067f-62a5-4e24-a81b-dfb311e93c38",
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "location": "usgovvirginia",
            "name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET",
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "subnets": [
              "vGFE-Virginia-vNext-Subnet-3",
              "vGFE-Virginia-vNext-Subnet-0",
              "vGFE-Virginia-vNext-Subnet-1",
              "vGFE-Virginia-vNext-Subnet-2"
            ]
          }
        }
      ]
    },
    {
      "module": "module.session_hosts[3]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/AVD-VA-011-4-RG/providers/Microsoft.Network/networkInterfaces/AVD-A-yxxb-1-NIC",
            "internal_domain_name_suffix": "p2do2kffmise3ka114zrd0j2ha.ax.internal.usgovcloudapp.net",
            "ip_configuration": [
              {
                "name": "webipconfig0",
                "primary": true,
                "private_ip_address": "10.49.2.196",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3"
              }
            ],
            "location": "usgovvirginia",
            "name": "AVD-A-yxxb-1-NIC",
            "private_ip_address": "10.49.2.196",
            "private_ip_addresses": [
              "10.49.2.196"
            ],
            "resource_group_name": "AVD-VA-011-4-RG"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.random_string.random",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[3]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.49.2.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3",
            "name": "vGFE-Virginia-vNext-Subnet-3",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "CAZ-MANAGE-P-RGP-CrossTenant",
            "virtual_network_name": "CAZ-MANAGE-P-RCWPAVD-EAST-VNET"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    },
    {
      "module": "module.session_hosts[3]",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "session_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3",
            "route_table_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/routeTables/CAZ-AVDFW-RCWPAVDA365-EAST-P-RT",
            "subnet_id": "/subscriptions/41dafe2e-0108-4dd0-827f-5110b0f0538d/resourceGroups/CAZ-MANAGE-P-RGP-CrossTenant/providers/Microsoft.Network/virtualNetworks/CAZ-MANAGE-P-RCWPAVD-EAST-VNET/subnets/vGFE-Virginia-vNext-Subnet-3"
          },
          "dependencies": [
            "data.azurerm_log_analytics_workspace.log_analytics_workspace",
            "module.hostpool_ga.azurerm_monitor_diagnostic_setting.avd-logs",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool.hostpool",
            "module.hostpool_ga.azurerm_virtual_desktop_host_pool_registration_info.token",
            "module.rg-avd.azurerm_resource_group.myRGs",
            "module.session_hosts.azurerm_subnet.subnet",
            "module.session_hosts.data.azurerm_route_table.rt",
            "module.session_hosts.data.azurerm_virtual_network.vnet",
            "module.workspace.azurerm_monitor_diagnostic_setting.avd_workspace-logs",
            "module.workspace.azurerm_virtual_desktop_workspace.workspace",
            "time_rotating.avd_registration_expiration"
          ]
        }
      ]
    }
  ]
}